k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fever-detection-service
  labels:
    app: fever-detection-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fever-detection-service
  template:
    metadata:
      labels:
        app: fever-detection-service
    spec:
      containers:
        - name: fever-detection-service
          image: docker.io/sanjayacl/fever-detection-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8082
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 20
